# rat-commander

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: release.yml
doc/: MANUAL.md
packaging/arch/: .SRCINFO  PKGBUILD
packaging/debian/: postinst  postrm
packaging/windows/: rc.wxs  rcedit.cmd
src/: console.rs  details.rs  drive.rs  ext.rs  flash.rs  main.rs  rename.rs  send.rs  shell.rs  usermenu.rs
src/app/: event.rs  mod.rs  state.rs
src/app/state/: checksum.rs  details.rs  dialogs.rs  disk.rs  duplicates.rs  ext.rs  fileops.rs  find.rs  git.rs  keys.rs  lifecycle.rs  mod.rs  mouse.rs  navigation.rs  net.rs  palette.rs  remote.rs  sendfile.rs  syncdirs.rs  tests.rs  viewer_editor.rs
src/config/: mod.rs  paths.rs
src/diff/: mod.rs  render.rs
src/disk/: mod.rs  render.rs
src/editor/: buffer.rs  hex.rs  mod.rs  render.rs
src/git/: mod.rs  ops.rs
src/l10n/: ar.toml  cs.toml  de.toml  en.toml  es.toml  fa.toml  fr.toml  hi.toml  hu.toml  ja.toml  mod.rs  nl.toml  pt.toml  ru.toml  sk.toml  sr.toml  tests.rs  uk.toml  zh-Hans.toml  zh-Hant.toml
src/mount/: mod.rs  render.rs
src/net/: mod.rs  render.rs  tests.rs
src/ops/: cancel.rs  engine.rs  mod.rs  progress.rs  sync.rs
src/panel/: mod.rs  render.rs  selection.rs  sort.rs  tree.rs
src/proc/: mod.rs  render.rs
src/syntax/: mod.rs
src/syntax/syntaxes/: cmake.sublime-syntax  dockerfile.sublime-syntax  elixir.sublime-syntax  graphql.sublime-syntax  hcl.sublime-syntax  ini.sublime-syntax  kotlin.sublime-syntax  nix.sublime-syntax  protobuf.sublime-syntax  scss.sublime-syntax  swift.sublime-syntax  toml.sublime-syntax  typescript.sublime-syntax  zig.sublime-syntax
src/ui/: cmdline.rs  dialog.rs  fkeys.rs  hexcolor.rs  layout.rs  menu.rs  menubar.rs  mod.rs  textedit.rs  theme.rs
src/ui/dialog/: backgroundops.rs  checksum.rs  compare.rs  confirm.rs  dirhistory.rs  drive.rs  find.rs  flash.rs  form.rs  gitout.rs  goto.rs  history.rs  hotlist.rs  input.rs  message.rs  mod.rs  multirename.rs  overwrite.rs  palette.rs  progress.rs  saveas.rs  search.rs  select.rs  send.rs  syncpreview.rs  tests.rs  usermenu.rs  widgets.rs
src/ui/graphics/: mod.rs  raster.rs
src/ui/theme_editor/: mod.rs  render.rs
src/util/: async_bridge.rs  bytes.rs  checksum.rs  error.rs  img.rs  mod.rs  qr.rs  scroll.rs  sysinfo.rs  temp.rs  text.rs
src/vfs/: local.rs  membuf.rs  mod.rs  path.rs  registry.rs
src/vfs/archive/: formats.rs  mod.rs
src/vfs/extfs/: mod.rs
src/vfs/remote/: ftp.rs  mod.rs  scp.rs  sftp.rs
src/viewer/: markdown.rs  mod.rs  render.rs  search.rs
