[package]
name = "rat-commander"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bzip2 = "0.6.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
flate2 = "1.1.9"
futures = "0.3.32"
globset = "0.4.18"
nix = { version = "0.31.3", features = ["fs", "user"] }
ratatui = "0.30.2"
ropey = "1.6.1"
russh = "0.61.2"
russh-sftp = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
sevenz-rust2 = "0.21.1"
suppaftp = { version = "9.0.0", default-features = false, features = ["tokio"] }
tar = "0.4.46"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
unicode-width = "0.2.2"
unrar = "0.5.8"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = "8.6.0"
