[package]
name = "rat-commander"
version = "1.4.0"
edition = "2024"
description = "A self-contained Norton/Midnight-Commander-style TUI file manager"
license = "GPL-2.0-only"
repository = "https://github.com/dividebysandwich/rat-commander"

# The installed executable is named `rc` for convenience.
[[bin]]
name = "rc"
path = "src/main.rs"

# cargo-deb packaging metadata (binary is auto-included from [[bin]]).
[package.metadata.deb]
maintainer = "rat-commander maintainers"
copyright = "rat-commander contributors"
section = "utils"
priority = "optional"
# postinst/postrm create and remove the `rcedit` shim (`/usr/bin/rcedit` → `rc`),
# which starts the program in the editor.
maintainer-scripts = "packaging/debian"
# Explicit dependencies (skips dpkg-shlibdeps, which cannot analyse the
# cross-compiled arm64/armhf binaries on an x86_64 CI host). These shared
# libraries ship by default on Debian and Raspberry Pi OS.
depends = "libc6, libgcc-s1, libstdc++6, liblzma5"
extended-description = """
rat-commander is a self-contained, Midnight-Commander-style two-panel file
manager for the terminal: internal viewer/editor, archives browsed as
directories, FTP/SFTP/SCP remote panels, themeable truecolor UI, and a
configurable F2 user menu."""
assets = [
    ["target/release/rc", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rat-commander/README.md", "644"],
]

[features]
default = ["rar"]
# RAR read/extract support (pulls in the C++ `unrar` library). Disable it
# (`--no-default-features`) where a C++ toolchain is unavailable or too old —
# e.g. the Raspberry Pi cross-compile images.
rar = ["dep:unrar"]

[dependencies]
async-trait = "0.1.89"
bzip2 = "0.6.1"
# File checksumming (File → Checksum). `digest` provides the common streaming
# trait shared by the RustCrypto hashers (`sha1`/`sha2`); `crc32fast` and `md5`
# bring their own. All are already in the tree via other dependencies.
crc32fast = "1.5.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
digest = "0.11.3"
directories = "6.0.0"
flate2 = "1.1.9"
futures = "0.3.32"
globset = "0.4.18"
md5 = "0.8.0"
memchr = "2.7.6"
portable-pty = "0.9.0"
ratatui = "0.30.2"
regex = "1.12.4"
ropey = "1.6.1"
russh = "0.61.2"
russh-sftp = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
sevenz-rust2 = "0.21.1"
sha1 = "0.11.0"
sha2 = "0.11.0"
# Syntax highlighting. Pure-Rust regex backend (no C `onig`) keeps the ARM
# cross-compile builds working; bundles Sublime syntaxes + themes, and more
# `.sublime-syntax`/theme files can be loaded later to extend it.
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
suppaftp = { version = "9.0.0", default-features = false, features = ["tokio"] }
tar = "0.4.46"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
unicode-width = "0.2.2"
unrar = { version = "0.5.8", optional = true }
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = "8.6.0"
# Cross-platform process/CPU/memory/disk/network sampling for the process
# explorer (Linux, Windows, macOS). Pure Rust, no external C deps. Only the
# `system` + `network` + `user` features are needed (drops temperature/components
# and the mounted-disk listing we don't use). `user` maps process UIDs to names.
sysinfo = { version = "0.39.5", default-features = false, features = ["system", "network", "user"] }
ar-reshaper = "1.5.0"
unicode-bidi = "0.3.18"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
image = { version = "0.25.10", default-features = false }
# Anti-aliased text baked into the terminal-graphics images (dialog button
# labels, disk-explorer treemap labels). `fontdue` is a pure-Rust glyph
# rasterizer (no C, ARM-cross-compile safe); `epaint_default_fonts` supplies the
# embedded Ubuntu font bytes (Latin + Cyrillic + Greek), so no font file is
# shipped separately. Baking (rather than overlaying cell text) is required
# because graphics protocols draw pixels over the terminal cells.
fontdue = "0.9"
epaint_default_fonts = "0.34"

# nix (chmod/chown/uid lookups, process signals) is Unix-only.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["fs", "user", "signal", "process"] }

[profile.release]
strip = true
opt-level = 3
